--- a/style.css
+++ b/style.css
@@ -388,6 +388,53 @@ a{
 .formcontato__text{
     display: flex;
     flex-direction: column;
+    height: 596px;
+}
+
+.formcontato__title{
+    font-size: 32px;
+    font-weight: bold;
+    margin: 0;
+    margin-bottom: 7px;
+    
+}
+
+.formcontato__subtext{
+    font-size: 16px;
+    font-weight: normal;
+    margin: 0;
+}
+
+.formcontato__subtext:nth-child(3){
+    margin-bottom: 32px;
+}
+
+.formcontato__form{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.formcontato__input{   
+    height: 56px;
+    margin-bottom: 32px;
+    border: none;
+}
+
+.formcontato__textarea{
+    height: 133px;
+    resize: none;
+    border: none;
+}
+
+.formcontato__botao{
+    background: #2A7AE4;
+    border-color: #2A7AE4;
+    color: white;
+    font-weight: normal;
+    width: 144px;
+    height: 51px;
+    margin-top: 32px;
 }
 
 /*footeer*/
@@ -402,12 +449,17 @@ a{
     font-size: 16px;
     margin: 0 -100px;
 
+    padding: 32px 0;
 }
 
 .footer__rodape{
     margin: 0 100px;
+
 }
 
+.footer__rodape p{
+    margin: 0;
+}
 
 /*Media - Tablet*/
 @media (max-width: 768px) {
